--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,10 +1,25 @@
 
+<div class="container">
+ <div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+
 <%= form_for(@question) do |f| %>
     <%= f.label :title  %> 
-    <%= f.text_field :title%>
+    <div class="form-group">
+    <%= f.text_field :title, class:"form-control"%>
+    </div>
 
     <%= f.label :description  %> 
-    <%= f.text_area :description, rows: 20%>
+    <div class="form-grouo"> 
+    <%= f.text_area :description, class:"form-control", rows: 20%>
+    </div>
 
-    <%= f.submit %>
+    <%= f.submit class:"btn btn-success"%>
+
 <% end %>
+
+<%= link_to  "Back", root_path, class:"btn btn-default" %>
+
+      </div>
+   </div> 
+ </div>
