--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+
+<div class="flash">
+  <% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
+</div>
+
+<% if signed_in? %>
+<%= link_to  "logout", logout_path, method: :delete %>
+<% end  %>
     <%= yield %>
   </body>
 </html>
