--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,4 +31,6 @@
  </div> <!--end div row-->
 </div>  <!--end div container-->
 
-<%= link_to  "back", root_path %>
+<div class="icon">
+   <%= link_to "#{fa_icon("chevron-circle-left")}".html_safe, root_path %>
+</div>
