--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,11 +6,13 @@
 <% @questions.each do  |question| %>
    <%= link_to question.title, question %> 
     <p> <%= question.description %> </p>
-
+    <br>
 <% if signed_in? %>
-   <%= link_to "New Question", new_question_path, class:"btn btn-success"%>
-   <%= link_to "Edit Question", edit_question_path(question), class:"btn btn-primary" %>
-   <%= link_to "Delete Question", question, class:"btn btn-warning", method: :delete, data: {confirm: "Are you sure you'd like to delete this post?"}  %>
+<div class="links">
+   <%= link_to "#{fa_icon("pen-square")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
+   <%= link_to "#{fa_icon("trash")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?", :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"}  %>
+</div>
+<br>
 <% end %>
 <% end  %>
    </div>
