--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,6 +3,16 @@
  <div class="row">
   <div class="col-sm-10 col-sm-offset-1">
 
+<% if @question.errors.any? %>
+  <div class="alert alert-danger">
+    <ul>
+    <% @question.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for(@question) do |f| %>
     <%= f.label :title  %> 
     <div class="form-group">
