--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,11 +3,12 @@
 <div class="container">
  <div class="row">
    <div class="col-sm-10 col-sm-offset-1">
+
 <% @questions.each do  |question| %>
    <%= link_to question.title, question %> 
     <p> <%= question.description %> </p>
     <br>
-<% if signed_in? %>
+<% if signed_in? && question.user == current_user%>
 <div class="links">
    <%= link_to "#{fa_icon("pen-square")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
    <%= link_to "#{fa_icon("trash")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?", :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"}  %>
