--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,14 +2,45 @@
 <div class="container">
  <div class="row">
   <div class="col-sm-10 col-sm-offset-1">
+
+    <!-- showing questions-->
     <h1 class="heading"><%= @question.title%> </h1><br>
     <%= @question.description %>
+    <!-- end showing questions-->
 
+    <!-- showing comments on questions-->
+     <h3>Comments </h3>
+  <% @question.comments.each do |comment| %>
+  <div class="well">
+    <%=comment.body %>
+  </div>
+  <% end  %>
+    <!-- end showing comments on questions-->
+
+
+    <!--form for the Question comments-->
+      <% if signed_in? %>
+  <%= form_for @comment, url: comments_path do |f| %>
+  <%= f.hidden_field :commentable_id, value: @question[:id] %>
+  <%= f.hidden_field :commentable_type, value: "Question" %>
+  <%= f.hidden_field :user_id, value: current_user[:id] if !current_user.nil? %>
+  <%= f.text_area :body, rows: 3, placeholder: "Add a comment", class:"form-control" %> <br>
+  <div class="text-right">
+    <%= f.submit 'Comment', class: 'btn btn-success' %>
+  </div>
+  <% end %>
+  <% end %>
+
+    <!--end form for the Question comments-->
+
+
+    <!-- Selecting which heading appears-->
     <% if @question.answers.count == 0  %>
    <h2> No answers so far. Be the first one to help out </h2>
     <% else %>
     <h2> Up until now the answers are: </h2>
     <% end  %>
+    <!-- Selection end-->
 
       <!-- Here the answers are displayed-->
     <% @question.answers.each do |answer| %>
