--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,6 +3,7 @@
  <div class="row">
   <div class="col-sm-10 col-sm-offset-1">
 
+<h1 class="heading"> <%= form_title %></h1> 
 <% if @question.errors.any? %>
   <div class="alert alert-danger">
     <ul>
@@ -23,12 +24,17 @@
     <div class="form-grouo"> 
     <%= f.text_area :description, class:"form-control", rows: 20%>
     </div>
-
-    <%= f.submit class:"btn btn-success"%>
-
+    <br>
+    <div class="text-center">
+    <%= f.button(:class => "btn btn-success") do %>
+    <%= fa_icon("check", :text => "Done!") %>
+    <% end  %>  <!--end button-->
+   </div>   
 <% end %>
 
-<%= link_to  "Back", root_path, class:"btn btn-default" %>
+<div class="icon">
+   <%= link_to "#{fa_icon("chevron-circle-left")}".html_safe, root_path %>
+</div>
 
      </div>
    </div> 
