--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,20 +1,31 @@
-<h1 class="heading"> Showing all Questions </h1>
+<br>
+<h1 class="heading"> Showing all Questions on <i class="fas fa-gem"></i> </h1>
 
 <div class="container">
  <div class="row">
    <div class="col-sm-10 col-sm-offset-1">
-
+<br>
 <% @questions.each do  |question| %>
+
+  <div class="q-title">
    <%= link_to question.title, question %> 
+  </div>
+ <br> 
+  <div class="q-description">
     <p> <%= question.description %> </p>
-    <br>
+  </div>
+
+  <br>  <br>
+
 <% if signed_in? && question.user == current_user%>
 <div class="links">
    <%= link_to "#{fa_icon("pen-square")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
    <%= link_to "#{fa_icon("trash")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?", :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"}  %>
 </div>
+
 <br>
-<% end %>
+ 
+<% end %> 
 <% end  %>
    </div>
   </div>
