votes for answers and styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,7 +218,7 @@ $dropDown: true;
 }
 
 .voted-heart {
-    font-size: 23px;
+    font-size: 21px;
     text-decoration: none;
     color:white;
 }
@@ -233,7 +233,7 @@ $dropDown: true;
   .voteicon a {
 
     text-decoration: none;
-    color: yellowgreen;
+    color: aqua;
   }
 
 
