--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -22,11 +22,21 @@
    <%= link_to "#{fa_icon("pen-square")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
    <%= link_to "#{fa_icon("trash")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?", :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"}  %>
 </div>
-
 <br>
- 
-<% end %> 
+  <% end %> 
 <% end  %>
+
+<% if signed_in? %>
+  <div class="voteicon">
+    <%= link_to "#{fa_icon("user-plus")} Ask New Question".html_safe, new_question_path %>
+  </div>
+<% else %>
+<div class="voteicon">
+    <%= link_to "#{fa_icon("user-plus")} Log in to ask new Question".html_safe, login_path %>
+</div>
+<% end %>
+
+    
    </div>
   </div>
  </div>
