--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -32,7 +32,7 @@
 
 <% if signed_in? %>
   <div class="voteicon">
-    <%= link_to "#{fa_icon("user-plus")} Ask New Question".html_safe, new_question_path %>
+    <%= link_to "#{fa_icon("feather-alt")} Ask New Question".html_safe, new_question_path %>
   </div>
 <% else %>
 <div class="voteicon">
