--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,7 +238,7 @@ $dropDown: true;
   .voteicon a {
 
     text-decoration: none;
-    color: azure;
+    color: aqua;
   }
 
 
@@ -263,7 +263,7 @@ $dropDown: true;
 }
 
 .index-icon-child i {
-        color: black;
+        color: yellow;
 
 }
 
