--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -33,7 +33,7 @@
 <% end %>
 
 <div class="icon">
-   <%= link_to "#{fa_icon("chevron-circle-left")}".html_safe, root_path %>
+   <%= link_to "#{fa_icon("chevron-left")}".html_safe, root_path %>
 </div>
 
      </div>
