--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -141,7 +141,7 @@
     <!--form for answers ends here-->
 
     <div class="icon">
-      <%= link_to "#{fa_icon("chevron-circle-left")}".html_safe, root_path %>
+      <%= link_to "#{fa_icon("chevron-left")}".html_safe, root_path %>
     </div>
 
   </div> <!--end div col-->
