--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
     <br>
-      <h1>Crear Cuenta</h1>
+      <h1>Create Account</h1>
 
       <% if @user.errors.any? %>
       <div class="alert alert-danger">
