--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,9 +4,9 @@
   <div class="col-sm-10 col-sm-offset-1">
 
     <!-- showing questions-->
-    <h1 class="heading"><%= @question.title%> </h1><br>
+    <h1 class="heading"><%= markdown(@question.title)%> </h1><br>
     <div class="q-description">
-    <%= @question.description %>
+    <%= markdown(@question.description) %>
     </div>
     <!-- end showing questions-->
     <br>
@@ -34,7 +34,7 @@
      <h3>Comments </h3>
     <% @question.comments.each do |comment| %>
     <div class="well">
-      <%=comment.body %>
+      <%= markdown(comment.body) %>
     </div>
   <% end  %>  <!--end comments each do-->
     <!-- end showing comments on questions-->
@@ -58,7 +58,7 @@
     <h2>Answers</h2>
      <!-- Here the answers are displayed-->
     <% @question.answers.each do |answer| %>
-        <div class="q-description"><%= answer.body %> </div>
+        <div class="q-description"><%= markdown(answer.body) %> </div>
      <!-- end of displaying answers-->
       <br>
      
@@ -87,7 +87,7 @@
     <h3>Comments: </h3>
      <% answer.comments.each do |comment| %>
     <div class="well" >
-      <%=comment.body %>
+      <%=markdown(comment.body) %>
     </div>
      <% end  %><!--end answer.comments.each do-->
     <!-- end showing comments on answer-->
